[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/SpriteSheets/main_char/mc_shadow.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/RatKing/RatKing.gd" type="Script" id=2]
[ext_resource path="res://assets/SpriteSheets/ratking/rat_king_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://src/Helpers/CustomParticles.gd" type="Script" id=4]
[ext_resource path="res://assets/SpriteSheets/hit markers/Effect 3 - Sprite Sheet.png" type="Texture" id=5]
[ext_resource path="res://assets/SpriteSheets/hit markers/hits2-Sheet.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 5
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4
anim_speed = 1.0

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
anim_speed = 2.0

[sub_resource type="Animation" id=5]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack_done"
} ]
}

[sub_resource type="Animation" id=6]
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Attack/AttackBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicSprite/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dispose"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=8]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32, 33 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=31]
states/attack/node = SubResource( 10 )
states/attack/position = Vector2( 526.259, 141.778 )
states/die/node = SubResource( 11 )
states/die/position = Vector2( 569, 50 )
states/hurt/node = SubResource( 12 )
states/hurt/position = Vector2( 278.259, 153.778 )
states/idle/node = SubResource( 13 )
states/idle/position = Vector2( 189, 18 )
states/walk/node = SubResource( 14 )
states/walk/position = Vector2( 385.259, -38 )
transitions = [ "idle", "die", SubResource( 15 ), "idle", "walk", SubResource( 16 ), "walk", "idle", SubResource( 17 ), "walk", "die", SubResource( 18 ), "idle", "hurt", SubResource( 19 ), "hurt", "idle", SubResource( 20 ), "walk", "hurt", SubResource( 21 ), "hurt", "walk", SubResource( 22 ), "hurt", "die", SubResource( 23 ), "attack", "hurt", SubResource( 24 ), "hurt", "attack", SubResource( 25 ), "attack", "idle", SubResource( 26 ), "idle", "attack", SubResource( 27 ), "attack", "walk", SubResource( 28 ), "walk", "attack", SubResource( 29 ), "attack", "die", SubResource( 30 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( -141.741, -67.1657 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=32]

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 9.46335, 6.32971 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 9.27378, 4 )

[sub_resource type="CircleShape2D" id=35]
radius = 13.2807

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 41.7161, 20.4317 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( -2.69232, -2.71673 )
z_as_relative = false
collision_layer = 1024
collision_mask = 7
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 1.44797, 0.946638 )
scale = Vector2( 0.84, 1 )
texture = ExtResource( 1 )

[node name="KinematicSprite" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="KinematicSprite"]
position = Vector2( 2.375, -12.3981 )
z_as_relative = false
texture = ExtResource( 3 )
offset = Vector2( 0, -15 )
hframes = 16
vframes = 4

[node name="PunchHitMarkerParticles" type="Particles2D" parent="KinematicSprite"]
material = SubResource( 1 )
position = Vector2( 1.09102, -31.26 )
scale = Vector2( 3, 3 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
fixed_fps = 8
process_material = SubResource( 2 )
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="KickHitMarkerParticles" type="Particles2D" parent="KinematicSprite"]
material = SubResource( 3 )
position = Vector2( -0.581059, -37.7572 )
scale = Vector2( 3, 3 )
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
fixed_fps = 10
process_material = SubResource( 4 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 5 )
anims/die = SubResource( 6 )
anims/hit = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/walk = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 31 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 32 )

[node name="HurtBox" type="Area2D" parent="." groups=[
"hurtbox",
]]
position = Vector2( 4.22855, -23.0993 )
collision_layer = 16384
collision_mask = 16

[node name="HurtBoxArea" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -3.10463, 15.8504 )
shape = SubResource( 33 )

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.68728, -1.84176 )
shape = SubResource( 34 )

[node name="Sight" type="RayCast2D" parent="."]
position = Vector2( 2.72855, -18.8493 )
enabled = true
cast_to = Vector2( 0, 100 )
collide_with_bodies = false

[node name="FlockBox" type="Area2D" parent="." groups=[
"enemy",
]]
position = Vector2( 0.547604, -46.2288 )
scale = Vector2( 2.53448, 2.29318 )
collision_layer = 262144
collision_mask = 262144

[node name="FlockBoxArea" type="CollisionShape2D" parent="FlockBox"]
position = Vector2( -0.799641, 19.7517 )
shape = SubResource( 35 )

[node name="Attack" type="Area2D" parent="."]
visible = false
modulate = Color( 0.431373, 1, 0, 1 )
position = Vector2( 2.72855, -18.8493 )
collision_layer = 4096
collision_mask = 0

[node name="AttackBox" type="CollisionShape2D" parent="Attack"]
position = Vector2( -1.54915, 14.6626 )
shape = SubResource( 36 )
disabled = true

[connection signal="area_entered" from="FlockBox" to="." method="_on_FlockBox_area_entered"]
[connection signal="area_exited" from="FlockBox" to="." method="_on_FlockBox_area_exited"]
[connection signal="area_entered" from="Attack" to="." method="_on_Attack_area_entered"]
